force-app/main/default/objects/B25__Service__c/B25__Service__c.object-meta.xml
<CustomObject>
    <description>This object contains the names and prices of Services that can then be offered by certain Resources through Service Availabilities.</description>
    <label>Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>