force-app/main/default/objects/B25__Service__c/fields/B25__Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>B25__Default_Quantity__c</fullName>
    <description>The default quantity for new Services added to a Reservation. Leaving this empty will copy the quantity from the Reservation.</description>
    <inlineHelpText>La quantité par défaut pour les nouveaux services ajoutés à une réservation. Si vous laissez ce champ vide, la quantité de la réservation sera copiée.</inlineHelpText>
    <label>Default Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>