force-app/main/default/objects/B25__Service__c/fields/B25__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>B25__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this box is checked, this Service is available for Reservations.</description>
    <inlineHelpText>Si cette case est cochée, ce service est disponible pour les réservations.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>