force-app/main/default/objects/B25__Service__c/fields/B25__Price__c.field-meta.xml
<CustomField>
    <fullName>B25__Price__c</fullName>
    <description>The price of the Service.</description>
    <inlineHelpText>Le prix du service.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>