force-app/main/default/objects/B25__Service__c/fields/B25__Service_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Service_Type__c</fullName>
    <description>The Service Type this Service record belongs to.</description>
    <inlineHelpText>Le type de service auquel appartient cet enregistrement de service.</inlineHelpText>
    <label>Service Type</label>
    <referenceTo>B25__Service_Type__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>