force-app/main/default/objects/B25__Service__c/listViews/B25__AllServices.listView-meta.xml
<ListView>
    <fullName>B25__AllServices</fullName>
    <columns>NAME</columns>
    <columns>B25__Service_Type__c</columns>
    <columns>B25__Price__c</columns>
    <columns>B25__Default_Quantity__c</columns>
    <columns>B25__Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>